--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/trh/Downloads/lwjgl-2.9.1/jar/lwjgl.jar" sourcepath="/home/trh/Downloads/lwjgl-2.9.1/src/java">
+	<classpathentry kind="lib" path="lwjgl-2.9.1/jar/lwjgl.jar" sourcepath="lwjgl-2.9.1/src/java">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/home/trh/Downloads/lwjgl-2.9.1/javadoc/"/>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/trh/Downloads/lwjgl-2.9.1/native/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JPong/lwjgl-2.9.1/native/windows"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
